--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="main-text">
       Я - пиздатый разработчик
    </div>
-   <div class="main-text--second">
+   <div class="main-text main-text--second">
       Андрей соснул хуйца :)
    </div>
 </body>
