--- a/index.html
+++ b/index.html
@@ -13,12 +13,110 @@
 </head>
 
 <body>
-   <div class="main-text">
-      Я - пиздатый разработчик
+   <div class="wrapper">
+
+      <!-- <section class="first-animation">
+         <div class="main-text">
+            Магическая магия анимации
+         </div>
+      </section> -->
+
+      <section class="main">
+         <div class="main-wrapper">
+            <!-- <div class="main-text main-text-second">
+               Alexey company presents
+            </div> -->
+         </div>
+         <div class="overlay"></div>
+         <!-- <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div>
+         <div class="overlay"></div> -->
+      </section>
+
+      <!-- <section class="second-animation">
+         <div class="main-text second-animation-text">
+            Поймай лампу алладина
+         </div>
+         <div class="flex">
+            <div class="alladin">
+               <img src="./alladin.png" alt="" class="alladin-image">
+               <img src="./lamp.png" alt="" class="lamp-image">
+               <img src="./light.png" alt="" class="light-image">
+            </div>
+            <div class="djin">
+               <img src="./zhin.png" alt="" class="djin-image">
+               <img src="./ball.jpg" alt="" class="ball-image">
+            </div>
+         </div>
+
+         <div class="button-wrapper">
+            <button id="butt" class="btn btn__second-animation">
+               <span class="btn-text">Давай нажми на меня</span>
+            </button>
+         </div>
+      </section>
+      <section class="rain">
+
+         <div class="water">
+            <div class="main-text second-animation-text" style="padding-top: 400px;"> -->
+               <!-- Поcмотри на этот дождь -->
+            <!-- </div>
+         </div>
+      </section> -->
+
+
+
+
    </div>
-   <div class="main-text main-text--second">
-      Андрей соснул хуйца :)
-   </div>
+
+   
+   <script src="./script.js"></script>
 </body>
 
 </html>
