--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
          <div class="main-text">
             Магическая магия анимации
          </div>
-      </section> -->
+      </section>
 
       <section class="main">
          <div class="main-wrapper">
-            <!-- <div class="main-text main-text-second">
+            <div class="main-text main-text-second">
                Alexey company presents
-            </div> -->
+            </div>
          </div>
-         <div class="overlay"></div>
-         <!-- <div class="overlay"></div>
+         <div class="overlay"></div> -->
+          <!-- <div class="overlay"></div>
          <div class="overlay"></div>
          <div class="overlay"></div>
          <div class="overlay"></div>
@@ -105,18 +105,27 @@
 
          <div class="water">
             <div class="main-text second-animation-text" style="padding-top: 400px;"> -->
-               <!-- Поcмотри на этот дождь -->
-            <!-- </div>
+      <!-- Поcмотри на этот дождь -->
+      <!-- </div>
          </div>
       </section> -->
 
-
+      <section class="image">
+         <div class="image__1">
+            <img class="image__class1 image__class" src="./bad.png" alt="">
+            <p class="text">Сделай правильный выбор ради лучшего будущего</p>
+         </div>
+         <div class="image__2">
+            <img class="image__class2 image__class" src="./good.png" alt="">
+            <p class="text text-2">Стань частью больших изменений</p>
+         </div>
+      </section>
 
 
    </div>
 
-   
-   <script src="./script.js"></script>
+
+   <!-- <script src="./script.js"></script> -->
 </body>
 
 </html>
